syntax = "proto3";

option go_package = "UwU/proto";

package UwU;

service UwU {
    rpc GetAllArticles (ArticleParam) returns (stream Article);
    rpc GetArticle (ArticleId) returns (Article);
    rpc CreateArticle (ArticleInput) returns (Nothing);
}

message Article {
    uint32 id = 1;
    uint32 author_id = 2;
    string title = 3;
    string body = 4;
    string created_at = 5;
}

message ArticleId {
    uint32 id = 1;
}

message ArticleParam {
    optional uint32 limit  = 1;
    optional uint32 page = 2;
    optional string author = 3;
    optional string query = 4;
}

message ArticleInput{
    uint32 author_id = 1;
    string title = 2;
    string body = 3;
}

message Nothing {}